# navily-cli

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  skill.md  tsconfig.json
.github/workflows/: ci.yml
docs/kb/: navily-api-architecture.md  navily-api-intent.md  navily-data-strategy.md
scripts/: inspect-headless.mjs  inspect-login.mjs
skills/navily/: SKILL.md
src/: assets.ts  cli.ts  client.ts  config.ts  formatters.ts  index.ts  types.ts
src/auth/: auto.ts  chrome.ts  http.ts  login.ts  session.ts  stealth.ts
src/navily/: __init__.py  cli.py  client.py  config.py  formatters.py
tests/: assets.test.ts  auth-auto.test.ts  client-pagination.test.ts  config.test.ts  formatters.test.ts  live-aegina.test.ts  test_config.py  test_formatters.py
